run executable from any directory

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,6 @@
 project('YTChannel2RSSFeed','c')
 PROJECT_NAME = meson.project_name()
+LOCAL_DIR = meson.current_source_dir()
 
 gtkdep = dependency('gtk4')
 
@@ -10,4 +11,4 @@ resources = gnome.compile_resources('resources', 'YTChannel2RSSFeed.gresource.xm
 
 sourcefiles = files('src/main.c', 'src/algorithms.c', 'src/ip_lookup.c', 'src/callbacks.c')
 
-executable(PROJECT_NAME, sourcefiles, resources, dependencies: gtkdep, export_dynamic: true)
+executable(PROJECT_NAME, sourcefiles, resources, dependencies: gtkdep, c_args:[ '-DLOCAL_DIR="@0@/"'.format(LOCAL_DIR)], export_dynamic: true)
